file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS ${CMAKE_SOURCE_DIR}/*.cc)
list(FILTER SOURCES EXCLUDE REGEX main\.cc$)

add_executable(tests ${SOURCES})

target_include_directories(tests PRIVATE ${CMAKE_SOURCE_DIR}/ctjs ${CMAKE_SOURCE_DIR}/src ${CMAKE_CURRENT_BINARY_DIR})

file(COPY js DESTINATION ${CMAKE_CURRENT_BINARY_DIR})


